[TASK] add placeholder html for search, add styling for search

--- a/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
+++ b/Resources/Private/Templates/ContentElements/Special/SiteHeader.html
@@ -60,7 +60,20 @@
           </f:if>
 
           <f:if condition="{data.headerTopSearch}">
-            -----headerTopSearch
+            <div class="tx_solr">
+                <div class="tx-solr-searchbox">
+                    <form method="get" id="tx-solr-search-form-pi-results" action="/search" data-suggest="/search" data-suggest-header="Top Results" accept-charset="utf-8">
+                        <div class="main-navigation__search-btn-wrp _header-top-search-btn">
+                            <a class="main-navigation__search-btn js__main-navigation__search-btn" href="#">Search<span></span></a>
+                        </div>
+                        <div class="main-navigation__search-box _header-top-search-btn js__main-navigation__search-box">
+                            <div class="awesomplete">
+                                <input type="search" id="inputText" class="tx-solr-q js-solr-q" name="tx_solr[q]" value="" placeholder="Search" data-search="searchSuggest" autocomplete="off" aria-autocomplete="list">
+                                <ul hidden=""></ul><span class="visually-hidden" role="status" aria-live="assertive" aria-relevant="additions"></span></div>
+                        </div>
+                    </form>
+                </div>
+            </div>
           </f:if>
 
           <f:if condition="{data.headerTopNavigation}">
@@ -87,16 +100,26 @@
             </f:if>
           </f:if>
           <f:if condition="{data.headerMiddleLangMenu} || {data.headerMiddleSearch}">
-            <div class="wrapper">
+            <div class="header-components">
               <f:if condition="{data.mainNavigationLangMenu}">
-                <div class="main-navigation__langMenu">
-                    <f:render section="LanguageNavigation" arguments="{languageNavigation: languageNavigation}" />
-                </div>
+                <f:render section="LanguageNavigation" arguments="{languageNavigation: languageNavigation}" />
               </f:if>
               <f:if condition="{data.mainNavigationSearch} > 0">
-                  <div class="header-middle__search-wrp" >
-                    <div class="header-middle__search-box" >
-                      <f:render section="Search" arguments="{data: data}" />
+                <f:comment><f:render section="Search" arguments="{data: data}" /></f:comment>
+                <div class="header-middle__search">
+                  <div class="tx_solr">
+                        <div class="tx-solr-searchbox">
+                            <form method="get" id="tx-solr-search-form-pi-results" action="/search" data-suggest="/search" data-suggest-header="Top Results" accept-charset="utf-8">
+                                <div class="header-middle__search-wrp">
+                                    <div class="header-middle__search-box">
+                                        <div class="awesomplete">
+                                            <input type="text" class="tx-solr-q js-solr-q header-middle__search-input" name="tx_solr[q]" value="" placeholder="Search" data-search="searchSuggest" autocomplete="off" aria-autocomplete="list">
+                                            <ul hidden=""></ul><span class="visually-hidden" role="status" aria-live="assertive" aria-relevant="additions"></span></div>
+                                        <button class="tx-solr-submit header-middle__search-submit" type="submit" value="Search"><span class="icons icon-t3-search"></span></button>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                     </div>
                   </div>
               </f:if>
@@ -155,7 +178,7 @@
 
         </ul>
         <f:if condition="{data.mainNavigationLangMenu} || {data.mainNavigationSearch}">
-          <div class="wrapper">
+          <div class="header-components">
             <f:if condition="{data.mainNavigationLangMenu}">
               <div class="main-navigation__langMenu">
                   <f:render section="LanguageNavigation" arguments="{languageNavigation: languageNavigation}" />
@@ -163,7 +186,21 @@
             </f:if>
             <f:if condition="{data.mainNavigationSearch} > 0">
               <div class="main-navigation__search">
-                  <f:render section="Search" arguments="{data: data}" />
+                  <f:comment><f:render section="Search" arguments="{data: data}" /></f:comment>
+                  <div class="tx_solr">
+                      <div class="tx-solr-searchbox">
+                          <form method="get" id="tx-solr-search-form-pi-results" action="/search" data-suggest="/search" data-suggest-header="Top Results" accept-charset="utf-8">
+                              <div class="main-navigation__search-btn-wrp">
+                                  <a class="main-navigation__search-btn js__main-navigation__search-btn" href="#">Search<span></span></a>
+                              </div>
+                              <div class="main-navigation__search-box js__main-navigation__search-box">
+                                  <div class="awesomplete">
+                                      <input type="search" id="inputText" name="tx_solr[q]" value="" placeholder="Search" data-search="searchSuggest" autocomplete="off" aria-autocomplete="list">
+                                      <ul hidden=""></ul><span class="visually-hidden" role="status" aria-live="assertive" aria-relevant="additions"></span></div>
+                              </div>
+                          </form>
+                      </div>
+                  </div>
               </div>
             </f:if>
           </div>
